<resources>
    <string name="app_name">Hw3_and_on</string>
    <string name="shows">Shows</string>
    <string name="noItemsString">Your list is empty</string>
    <string name="title_activity_add_episode">AddEpisodeActivity</string>
    <string name="add_episode">Add episode</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="Add">Add</string>
    <string name="id_extra">Activity takes show ID as extra</string>
    <string name="not_contained_show">Show not contained in database</string>
    <string name="empty_fields">None of required fields can be empty or invalid</string>
    <string name="back_action">You have unsaved changes, are you sure you want to go back?</string>
    <string name="no">Edit episode</string>
    <string name="yes">Go back</string>
    <string name="add_photo">Add photo</string>
    <string name="seasonEpisode">Season &amp; Episode</string>
    <string name="unknown">Unknown</string>
    <string name="title">Title</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="episode_shower">S%s E%s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="unable_to_photo">Unable to load image</string>
    <string name="camera_permission">Camera permission needed to take episode picture</string>
    <string name="external_storage_permission">Storage permission needed to take load picture</string>
    <string name="error_image">Error saving image</string>
    <string name="error_save_episodes">Error saving show episodes</string>
    <string name="error_load_episodes">Error loading episodes from file</string>
    <string name="permission_needed">Permission needed for that action</string>
    <string name="camera_unavailable">Camera not available</string>
    <string name="error_file">Error creating file to save image</string>
    <string name="must_implement">must implement OnArticleSelectedListener</string>
    <string name="leave_unsaved">This action will leave current add episode unsaved. Do you wish to continue?</string>
    <string name="episode_extra">Activity takes episode as extra</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="invalid_email">Invalid email given.</string>
    <string name="password_invalid">Password must have at least 5 characters.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_match">Confirm password doesn\'t match.</string>
    <string name="unknown_error">Unknown error! Please try again.</string>
    <string name="unable_register">Unable to register new user.</string>
    <string name="unable_login">Invalid email or password.</string>
    <string name="loading">Loading</string>
    <string name="new_user_200">Account registered successfully</string>
    <string name="log_out">Are you sure you want to log out?</string>
    <string name="log_out_title">Log out</string>
    <string name="plain_yes">Yes</string>
    <string name="plain_no">No</string>
    <string name="data_unable">Unable to load shows list.</string>
    <string name="error_show_loading">Error loading shows list.</string>
    <string name="logn_sucess">Login successful</string>
    <string name="switch_view">Switch view</string>
    <string name="try_again">Unknown error! Please try again.</string>
    <string name="ok">OK</string>
    <string name="database_empty">Database is empty.</string>
    <string name="newEpisodeSeason">S%s Ep%s</string>
    <string name="episodes">Episodes</string>
    <string name="asleep">Someone has fallen asleep.</string>
    <string name="don_t_wake_him_up">Don\'t wake him up.</string>
    <string name="add_some_episodes">Add some episodes.</string>
    <string name="no_connection">Connection not provided</string>
    <string name="email_exists">Email already exists</string>
    <string name="shows_noncap">shows</string>
    <string name="show_image">showImage</string>
    <string name="show_title">show title</string>
    <string name="cancel">Cancel</string>
    <string name="update_status">Update like status</string>
    <string name="internt_like">Internet needed to update show like status</string>
    <string name="wasnt_liked">Show wasn\'t liked</string>
    <string name="wasnt_disliked">Show wasn\'t disliked</string>
    <string name="upload_photo">Upload photo</string>
    <string name="episode_title">Episode title</string>
    <string name="episode_description">Episode description</string>
    <string name="episode_empty_message">Episode name can\'t be empty</string>
    <string name="episode_add">Adding episode</string>
    <string name="upload_image">Upload image</string>
    <string name="episode_success">Episode added successfully</string>
    <string name="comments">Comments</string>
    <string name="id_extra_episode">Activity takes episode ID as extra</string>
    <string name="comments_empty_text">Sorry, we don\'t have comments yet.\nBe first who will write a review.</string>
    <string name="add_comment">Add a comment...</string>
    <string name="post">Post</string>
    <string name="invalid_comment">Empty comment can\'t be posted.</string>
    <string name="unable_comments">Unable to load comments</string>
    <string name="unable_post_comment">Unable to post comment</string>
    <string name="comment_posted">Comment successfully posted</string>
    <string name="connection_comment_post">Connection needed to post comment</string>

</resources>
