<?xml version="1.0" encoding="utf-8"?>

<merge android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:parentTag="android.widget.LinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextBaseStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/baseColor">

            <android.support.design.widget.TextInputEditText
                style="@style/EditTextBaseStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/rememberCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:textSize="16sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonStyle"
            android:text="@string/login"
            android:padding="7dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_an_account"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

    </merge>