<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/showImage"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/show_image"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyPlaceholder"
        android:src="@drawable/ic_image_choose"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/likeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/like_icon_background"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like_icon" />

            <TextView
                android:id="@+id/likesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dislikeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dislike_icon_background"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dislike_icon" />

            <TextView
                android:id="@+id/dislikesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/showDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:layout_below="@id/showImage">

        <TextView
            android:id="@+id/showTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:transitionName="@string/show_title"/>

        <TextView
            android:id="@+id/showDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/showTitle"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/episodesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/showDescription"
            android:text="@string/episodes"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/showDescription"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/episodesText"
            android:text="0"
            android:textSize="22sp" />

    </RelativeLayout>
</RelativeLayout>