<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/episodesSwiper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/showImage"
                        android:layout_width="match_parent"
                        android:layout_height="510dp"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/emptyPlaceholder"
                        android:src="@drawable/ic_image_choose"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true">

                        <LinearLayout
                            android:id="@+id/likeIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/like_icon_background"
                            android:orientation="horizontal"
                            android:layout_marginBottom="40dp"
                            android:layout_marginEnd="20dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_like_icon" />

                            <TextView
                                android:id="@+id/likesCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dislikeIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/dislike_icon_background"
                            android:orientation="horizontal"
                            android:layout_marginBottom="40dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dislike_icon" />

                            <TextView
                                android:id="@+id/dislikesCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_marginStart="5dp"/>

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/showDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp">

                    <TextView
                        android:id="@+id/showTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/showDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/showTitle"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/episodesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/showDescription"
                        android:text="@string/episodes"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/showDescription"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/episodesText"
                        android:text="0"
                        android:textSize="22sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <LinearLayout
                        android:id="@+id/listEmptyLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_empty_placeholder"
                            android:layout_gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/asleep"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:layout_gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_wake_him_up"
                            android:textSize="15sp"
                            android:layout_gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_some_episodes"
                            android:textSize="15sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/baseColor"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/episodesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/episodesToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_back_arrow_black" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/addEpisodeButton"/>
    </FrameLayout>